Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96947

Cannot go back from multi option for qmlvideo example

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.2.2, 6.3
    • 6.2
    • Multimedia
    • None
    • Android
    • 2021wk40POAndroid&Mobile

      Steps to reproduce:
      1. Run qmlvideo example on Android device
      2. Set file 1 and file 2
      3. Select multi from video modes
      4. Start replaying both videos
      5. Try to return to main view by pressing "Back"

      Actual:
      Cannot go back to main view
      Expected:
      Main view should be displayed

        1. mobizen_20210928_155502.mp4
          1.30 MB
        2. trace.txt
          16 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            pekkagehor Pekka Gehör
            mateusz_sobal Mateusz Sobal
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes