Android: Fix the back button issues on qmlvideo example

After the fix, the app will no longer hang after back button has been clicked.

Task-number: QTBUG-96947
Pick-to: 6.2
Change-Id: Ia2adb7f493d66a3df0961793fd6bc5f998ad4764
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>